--- a/views/home.html
+++ b/views/home.html
@@ -5,8 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitchening</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <H1>Kitchening</H1>
+    <header>
+        <img src="/images/logo.jpg"   alt="">
+        <a class='burger' href=""><i> <i class="fas fa-bars"></i></i> </a>
+        <nav>
+            <ul> 
+                <li><a class='header nav ul li a' href="">HOME</a></li>
+                <li><a href="">QUIENES</a></li>
+                <li><a href="">SERVICIOS</a></li>
+                <li><a href="">PORTFOLIO</a></li>
+                <li><a href="">SUCURSALES</a></li>
+                <li><a href="">CONTACTO</a></li>
+                 </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="banner">
+            <img src="/images/img-banner.jpg" alt= "">
+
+        </section>
+        <section class="products">
+            <article class="produsts">
+                <img  class="photo"src="/images/img-pdto-1.jpg" alt="">
+                <img class="label" src="/images/img-descuento.png" alt="">
+                <p class="zoom"></p>
+                <h4>lorem ipsum dolor amet</h4>
+                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a href="">ver más</a>
+
+            </article>
+        </section>
+        <section class="products">
+            <article class="produsts">
+                <img  class="photo"src="/images/img-pdto-2.jpg" alt="">
+                <img class="label" src="/images/img-descuento.png" alt="">
+                <p class="zoom"></p>
+                <h4>lorem ipsum dolor amet</h4>
+                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a href="">ver más</a>
+
+            </article>
+        </section>
+        <section class="products">
+            <article class="produsts">
+                <img  class="photo"src="/images/img-pdto-3.jpg" alt="">
+                <img class="label" src="/images/img-gratis.png" alt="">
+                <p class="zoom"></p>
+                <h4>lorem ipsum dolor amet</h4>
+                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a href="">ver más</a>
+
+            </article>
+        </section>
+        <section class="products">
+            <article class="produsts">
+                <img  class="photo"src="/images/img-pdto-1.jpg" alt="">
+                <img class="label" src="/images/img-nuevo.png" alt="">
+                <p class="zoom"></p>
+                <h4>lorem ipsum dolor amet</h4>
+                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a href="">ver más</a>
+
+            </article>
+        </section>
+        <section class="products">
+            <article class="produsts">
+                <img  class="photo"src="/images/img-pdto-2.jpg" alt="">
+                <img class="label" src="/images/img-gratis.png" alt="">
+                <p class="zoom"></p>
+                <h4>lorem ipsum dolor amet</h4>
+                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a href="">ver más</a>
+
+            </article>
+        </section>
+        <section class="products">
+            <article class="produsts">
+                <img  class="photo"src="/images/img-pdto-3.jpg" alt="">
+                <img class="label" src="/images/img-nuevo.png" alt="">
+                <p class="zoom"></p>
+                <h4>lorem ipsum dolor amet</h4>
+                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a href="">ver más</a>
+
+            </article>
+        </section>
+    </main>
 </body>
 </html>
