--- a/views/home.html
+++ b/views/home.html
@@ -29,71 +29,112 @@
 
         </section>
         <section class="products">
-            <article class="produsts">
+            <article class="product">
+                <div class='image-container'>    
                 <img  class="photo"src="/images/img-pdto-1.jpg" alt="">
                 <img class="label" src="/images/img-descuento.png" alt="">
-                <p class="zoom"></p>
+                <a class="zoom">ampliar foto</a>
+               
+            </div>
                 <h4>lorem ipsum dolor amet</h4>
-                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
-                    <a href="">ver más</a>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                <a class='more' href="">ver más</a>  
+
+            </article>
+        </section>
+        <section class='products'>
+            <article class="product">
+                <div class='image-container'>
+                    <img  class="photo"src="/images/img-pdto-2.jpg" alt="">
+                    <img class="label" src="/images/img-descuento.png" alt="">
+                    <a class="zoom"> ampliar foto</a>
+                </div>
+                <h4>lorem ipsum dolor amet</h4>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a class="more" href="">ver más</a>
 
             </article>
         </section>
         <section class="products">
-            <article class="produsts">
-                <img  class="photo"src="/images/img-pdto-2.jpg" alt="">
-                <img class="label" src="/images/img-descuento.png" alt="">
-                <p class="zoom"></p>
+            <article class="product">
+                <div class='image-container'>
+                    <img  class="photo"src="/images/img-pdto-3.jpg" alt="">
+                    <img class="label" src="/images/img-gratis.png" alt="">
+                    <a class="zoom">ampliar foto</a>
+                </div>
                 <h4>lorem ipsum dolor amet</h4>
-                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
-                    <a href="">ver más</a>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a class= 'more' href="">ver más</a>
+
+            </article>
+        </section>
+        <section class='products'>
+            <article class="product">
+                   <div class='image-container'>
+                        <img  class="photo"src="/images/img-pdto-1.jpg" alt="">
+                        <img class="label" src="/images/img-nuevo.png" alt="">
+                        <a class="zoom">ampliar foto</a>
+                   </div>
+            
+                <h4>lorem ipsum dolor amet</h4>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a class="more" href="">ver más</a>
+
+            </article>
+        </section>
+      
+        </section>
+        <section class='products'>
+            <article class="product">
+                <div class='image-container'>
+                    <img  class="photo"src="/images/img-pdto-3.jpg" alt="">
+                    <img class="label" src="/images/img-nuevo.png" alt="">
+                    <a class="zoom">ampliar foto</a>
+                </div>
+                <h4>lorem ipsum dolor amet</h4>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a class="more" href="">ver más</a>
 
             </article>
         </section>
         <section class="products">
-            <article class="produsts">
-                <img  class="photo"src="/images/img-pdto-3.jpg" alt="">
-                <img class="label" src="/images/img-gratis.png" alt="">
-                <p class="zoom"></p>
+            <article class="product">
+                <div class='image-container'>
+                    <img  class="photo"src="/images/img-pdto-3.jpg" alt="">
+                    <img class="label" src="/images/img-nuevo.png" alt="">
+                    <a class="zoom">ampliar foto</a>
+                </div>
                 <h4>lorem ipsum dolor amet</h4>
-                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
-                    <a href="">ver más</a>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a class="more" href="">ver más</a>
 
             </article>
         </section>
         <section class="products">
-            <article class="produsts">
-                <img  class="photo"src="/images/img-pdto-1.jpg" alt="">
-                <img class="label" src="/images/img-nuevo.png" alt="">
-                <p class="zoom"></p>
+            <article class="product">
+                <div class='image-container'>
+                    <img  class="photo"src="/images/img-pdto-3.jpg" alt="">
+                    <img class="label" src="/images/img-nuevo.png" alt="">
+                    <a class="zoom">ampliar foto</a>
+                </div>
                 <h4>lorem ipsum dolor amet</h4>
-                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
-                    <a href="">ver más</a>
-
-            </article>
-        </section>
-        <section class="products">
-            <article class="produsts">
-                <img  class="photo"src="/images/img-pdto-2.jpg" alt="">
-                <img class="label" src="/images/img-gratis.png" alt="">
-                <p class="zoom"></p>
-                <h4>lorem ipsum dolor amet</h4>
-                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
-                    <a href="">ver más</a>
-
-            </article>
-        </section>
-        <section class="products">
-            <article class="produsts">
-                <img  class="photo"src="/images/img-pdto-3.jpg" alt="">
-                <img class="label" src="/images/img-nuevo.png" alt="">
-                <p class="zoom"></p>
-                <h4>lorem ipsum dolor amet</h4>
-                <p class="desciption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
-                    <a href="">ver más</a>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate quibusdam, qui iste laudantium itaque voluptas?</p>
+                    <a class="more" href="">ver más</a>
 
             </article>
         </section>
     </main>
+    <footer> 
+    <nav>
+        <ul> 
+            <li><a class='header nav ul li a' href="">HOME</a></li>
+            <li><a href="">QUIENES</a></li>
+            <li><a href="">SERVICIOS</a></li>
+            <li><a href="">PORTFOLIO</a></li>
+            <li><a href="">SUCURSALES</a></li>
+            <li><a href="">CONTACTO</a></li>
+             </ul>
+    </nav>
+    </footer>
 </body>
 </html>
