--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,7 @@ li{
 }/*se saca el punto de lista*/
 a{ 
     text-decoration: none;
-}/*se saca el subrayado del header linkiable*/
+} /*se saca el subrayado del header linkiable*/
 header{
     text-align:center;
 }
@@ -41,6 +41,7 @@ header nav ul li {
     width: 100%;
  background-color:gray;
  margin-bottom: 1px;
+ text-align: center;
  
 }
 header nav ul li a {
@@ -51,10 +52,158 @@ header nav ul li a {
 }
 
 /*main*/
-.banner{
+.banner img {
     display:none;
+}
+article{
+    width: 100%;
+}
+article .image-container{
+    position: relative;
+}
+article .image-container img.photo{
+    width: 100%;
+    
+}
+
+article .image-container img.label{
+    position: absolute;/* para maniular la posicion de un elemento le das absuloto lo moves, pero si no le das al contenedor relativo , se va a poner en el*/
+    top: 0;
+    right: 10px;
+
+}
+
+article .image-container a.zoom{
+    width: 100%;
+    position: absolute;
+    top: 45%;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 8px;
+    right:0;
+}
+article h4{
+    margin: 20px 0;
+}
+article a.more{
+    display: inline-block;
+    padding: 10px;
+    margin: 20px 0;
+    background-color: #63645d;
+    color: white;
+    font-weight: 600;
+}
+
+article a.more:hover{
+    background-color: red;
+
 }
 
 
 
+
 /*footer*/
+footer{
+    text-align: center;
+}
+
+footer nav ul li {
+    width: 100%;
+    background-color: #63645d;
+    margin-bottom: 1px;
+}
+
+footer nav ul li a{
+    display: inline-block;
+    color: white;
+    text-transform: uppercase;
+    padding: 10px;
+}
+
+/* tablet */
+@media (min-width : 481px) {
+
+    /* header */
+
+    header a.burger {
+        display: none;
+    }
+
+    header nav ul{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    header nav ul li {
+        width: 16%;
+        font-size: 0.52rem;
+        text-align: center;
+    }
+
+    header nav ul li.que{
+        order: 2;
+    }
+    header nav ul li.suc{
+        order: 1;
+        flex-grow: 0.2;
+    }
+
+    /* main */
+
+    .banner img{
+        display: block;
+        width: 100%;
+        margin: 20px 0;
+    }
+
+    section.products{
+        display: flex;
+        flex-wrap:wrap;
+        justify-content: space-between;
+    
+    
+    }
+
+    article {
+        width: 48%;
+    }
+
+   
+}
+
+@media (min-width:769px) {
+    header nav ul li {
+        font-size: 1rem;
+    }
+
+    article{
+       width: 32%;
+    }
+    
+  
+
+    /* footer */
+
+footer{
+    background-color: red;
+    height: 100px;
+    border-radius: 30px 30px 0 0 ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer nav ul li {
+    display: inline;
+    background-color: transparent;
+    margin-bottom: 1px;
+    border-right: 2px solid white;
+}
+
+footer nav ul li:last-child{
+    border-right: none;
+}
+}
